--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,17 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-	
-    
+
+		<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NQ730JY540"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-NQ730JY540');
+	</script>
+		
 	<script async src="./js/jquery-2.1.0.min.js"></script>
 	<script async src="./js/bootstrap.min.js"></script>
 	<script async src="./js/blocs.min.js"></script>
