--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta name="keywords" content="web design, seo, site web, agence web, agence design lyon">
     <meta name="description" content="La Panthère, agence spécialisée en web design à Lyon. Nous vous accompagnons dans la création de vos projets avec un design unique, alliée à une stratégie de communication seo efficace.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="google-site-verification" content="LyoWaxcMUybbvCsycGk8iPG1ClEBTyv8UZuM7W12Ksc" />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg"> 
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+
+			<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NQ730JY540"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-NQ730JY540');
+	</script>
 	<script async src="./js/jquery-2.1.0.js"></script>
 	<script async src="./js/bootstrap.js"></script>
 	<script async src="./js/blocs.js"></script>
