--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 	<script async src="./js/jquery-2.1.0.min.js"></script>
 	<script async src="./js/bootstrap.min.js"></script>
 	<script async src="./js/blocs.min.js"></script>
-	<script async src="./js/jqBootstrapValidation.js"></script>
+	<script defer src="./js/jqBootstrapValidation.js"></script>
 	<script async src="./js/formHandler.js"></script>
     <title>Contact</title>
 
