minify ressouces, corrections

--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
 	<script async src="./js/jquery-2.1.0.min.js"></script>
 	<script async src="./js/bootstrap.min.js"></script>
 	<script async src="./js/blocs.min.js"></script>
-	<script defer src="./js/jqBootstrapValidation.js"></script>
-	<script async src="./js/formHandler.js"></script>
+	<script defer src="./js/jqBootstrapValidation.min.js"></script>
+	<script async src="./js/formHandler.min.js"></script>
     <title>Contact</title>
 
     
@@ -141,22 +141,22 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
+								<a class="social" href="#" aria-label="twitter"><span class="fa fa-twitter icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
+								<a class="social" href="#" aria-label="facebook"><span class="fa fa-facebook icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
+								<a class="social" href="#" aria-label="dribble"><span class="fa fa-dribbble icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
+								<a class="social" href="#" aria-label="instagram"><span class="fa fa-instagram icon-md"></span></a>
 							</div>
 						</div>
 					</div>
