--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 
 	gtag('config', 'G-NQ730JY540');
 	</script>
-	<script async src="./js/jquery-2.1.0.js"></script>
-	<script async src="./js/bootstrap.js"></script>
-	<script async src="./js/blocs.js"></script>
-	<script defer src="./js/jquery.touchSwipe.js"></script>
-	<script async src="./js/gmaps.js"></script>
+	<script async src="./js/jquery-2.1.0.min.js"></script>
+	<script async src="./js/bootstrap.min.js"></script>
+	<script async src="./js/blocs.min.js"></script>
+	<script defer src="./js/jquery.touchSwipe.min.js"></script>
     <title>La Panthère, Agence de web design à Lyon</title>
 </head>
 
@@ -223,22 +222,22 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
+								<a class="social" href="#" aria-label="twitter"><span class="fa fa-twitter icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
+								<a class="social" href="#" aria-label="facebook"><span class="fa fa-facebook icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
+								<a class="social" href="#" aria-label="dribble"><span class="fa fa-dribbble icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
+								<a class="social" href="#" aria-label="instagram"><span class="fa fa-instagram icon-md"></span></a>
 							</div>
 						</div>
 					</div>
