--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<script async src="./js/bootstrap.min.js"></script>
 	<script async src="./js/blocs.min.js"></script>
 	<script defer src="./js/jquery.touchSwipe.min.js"></script>
-    <title>La Panthère, Agence de web design à Lyon</title>
+    <title>La Panthère -Agence Webdesign à Lyon, spécialiste dans la création de site web</title>
 </head>
 
 
@@ -215,7 +215,7 @@
 		<div class="container bloc-sm">
 			<div class="row">
 				<div class="col-sm-12">
-					<p class="text-center white">
+					<p class="text-center">
 						Agence La Panthère - Agence web basée à Lyon.<br>
 					</p>
 					<div class="row row-no-gutters social">
