--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 	<script async src="./js/blocs.min.js"></script>
 	<script defer src="./js/jqBootstrapValidation.min.js"></script>
 	<script async src="./js/formHandler.min.js"></script>
-    <title>Contact</title>
+    <title>Contactez notre agence spécialiste du web-design</title>
 
     
 <!-- Analytics -->
@@ -65,10 +65,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="text-center hero-bloc-text tc-white">
+				<h1 class="text-center hero-bloc-text">
 					Parlons web design !
 				</h1>
-				<p class="text-center mg-lg tc-white tight-width-whitespace">
+				<p class="text-center mg-lg tight-width-whitespace">
 					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 				</p>
@@ -134,7 +134,7 @@
 		<div class="container bloc-sm">
 			<div class="row">
 				<div class="col-sm-12">
-					<p class="text-center white">
+					<p class="text-center">
 						Agence La Panthère - Agence web basée à Lyon.<br>
 					</p>
 					<div class="row row-no-gutters social">
