--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<script async src="./js/bootstrap.min.js"></script>
 	<script async src="./js/blocs.min.js"></script>
 	<script defer src="./js/jquery.touchSwipe.min.js"></script>
-    <title>La Panthère -Agence Webdesign à Lyon, spécialiste dans la création de site web</title>
+	<title>La Panthère -Agence Webdesign à Lyon, spécialiste dans la création de site web</title>   
 </head>
 
 
@@ -36,7 +36,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40">
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence webdesign La Panthère" height="40">
 				</a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
