corrections erreurs + script jquery

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,8 @@
 	<script async src="./js/blocs.min.js"></script>
 	<script defer src="./js/jqBootstrapValidation.min.js"></script>
 	<script async src="./js/formHandler.min.js"></script>
+	<script src="./js/jquery-2.1.0.min.js"></script>
+	
     <title>Contactez notre agence spécialiste du web-design</title>
 
     
