--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="web design, seo, site web, agence web, agence design lyon">
     <meta name="description" content="La Panthère, agence spécialisée en web design à Lyon. Nous vous accompagnons dans la création de vos projets avec un design unique, alliée à une stratégie de communication seo efficace.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<meta name="google-site-verification" content="LyoWaxcMUybbvCsycGk8iPG1ClEBTyv8UZuM7W12Ksc" />
+	<meta name="google-site-verification" content="LyoWaxcMUybbvCsycGk8iPG1ClEBTyv8UZuM7W12Ksc">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg"> 
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.min.css">
@@ -21,9 +21,11 @@
 
 	gtag('config', 'G-NQ730JY540');
 	</script>
+	<script src="./js/jquery-2.1.0.min.js"></script>
 	<script async src="./js/bootstrap.min.js"></script>
 	<script async src="./js/blocs.min.js"></script>
 	<script defer src="./js/jquery.touchSwipe.min.js"></script>
+
 	<title>La Panthère -Agence Webdesign à Lyon, spécialiste dans la création de site web</title>   
 </head>
 
@@ -118,7 +120,7 @@
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 				<p>"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."
-				</br>Maxime Guibard, PDG de À vos fourchettes</p>
+				<br/>Maxime Guibard, PDG de À vos fourchettes</p>
 			</div>
 		</div>
 	</div>
@@ -152,7 +154,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="exemple de site web crée par l'agence pour un journal local" class="img-responsive portfolio-thumb" ></a>
+				<a href="#" data-lightbox="img/1_zoom.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="exemple de site web crée par l'agence pour un journal local" class="img-responsive portfolio-thumb" ></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -161,7 +163,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="exemple d'un site web crée pour un photographe" ></a>
+				<a href="#" data-lightbox="img/2_zoom.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="exemple d'un site web crée pour un photographe" ></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -172,7 +174,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt= "photo exemple d'un site web crée pour un voyageur"></a>
+				<a href="#" data-lightbox="img/3_zoom.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt= "photo exemple d'un site web crée pour un voyageur"></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -181,7 +183,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="exemple de conception d'un site web pour une agence de mariage" ></a>
+				<a href="#" data-lightbox="img/4_zoom.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="exemple de conception d'un site web pour une agence de mariage" ></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
